<resources>
    <string name="app_name">Telega</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="adam_tomas">Adam Tomas</string>
    <string name="online">online</string>
    <string name="settings_account_title">Account</string>
    <string name="setting_default_phone">+21293949459</string>
    <string name="settings_touch_to_change_phone_number">Touch to change phone number</string>
    <string name="settings_default_login">adam@tomas</string>
    <string name="settings_label_login_user_name">User name</string>
    <string name="settings_default_about">About</string>
    <string name="settings_label_bio_about">Right something about yourself</string>
    <string name="settings_text_lable">Settings</string>
    <string name="cd_enter_verification_code">enter_verification_code</string>
    <string name="input_code">Input Code</string>
    <string name="we_send_you_sms">We send you SMS with verification code on Your phone number</string>
    <string name="default_phone_number">+1(950)444-32-32</string>
    <string name="sms_hint">_ _ _ _ _ _</string>
    <string name="your_phone_num_is">Your Phone num is</string>
    <string name="input_your_phone_num">input your phone num</string>
    <string name="input_name">Input Name</string>
    <string name="input_second_name">Input second name</string>
    <string name="name_can_not_be_empty">Name can not be Empty</string>
    <string name="toast_data_updated">data updated</string>
    <string name="settings_hint_input_username">User name</string>
    <string name="user_name_busy">This user name is already exist</string>
    <string name="input_about">about</string>
    <string name="readingContacts">reading contacts</string>
    <string name="fragment_contacts_title">Contacts</string>
</resources>