<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.InputVerificationCodeFragment">

    <ImageView
        android:id="@+id/image_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/verification_code"
        android:layout_marginTop="@dimen/vertical_large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_enter_verification_code"/>

    <TextView
        android:id="@+id/tv_input_code_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_code"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/image_verification_code" />

    <TextView
        android:id="@+id/tv_verification_code_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_send_you_sms"
        android:textAlignment="center"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_code_label" />

    <TextView
        android:id="@+id/tv_verification_code_description_label_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_phone_number"
        android:textAlignment="center"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verification_code_description_label" />

    <EditText
        android:id="@+id/register_input_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/sms_hint"
        android:textColorHint="@color/primary"
        android:inputType="phone"
        android:maxLength="6"

        android:padding="@dimen/app_padding"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verification_code_description_label_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>